--- a/openwrt-ci.yml
+++ b/openwrt-ci.yml
@@ -185,7 +185,10 @@ jobs:
            # CONFIG_TARGET_IMAGES_PAD is not set
            # CONFIG_VMDK_IMAGES is not set
            EOF
-
+           
+          # 修改默认IP
+          #sed -i 's/192.168.1.1/192.168.50.5/g' package/base-files/files/bin/config_generate
+          
           # 
           # ========================固件定制部分结束========================
           # 
