--- a/openwrt-ci.yml
+++ b/openwrt-ci.yml
@@ -209,24 +209,47 @@ jobs:
            CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
            CONFIG_PACKAGE_luci-app-ttyd=y
            CONFIG_PACKAGE_luci-app-v2ray-server=y
-           CONFIG_PACKAGE_
-           CONFIG_PACKAGE_
-           CONFIG_PACKAGE_
-           CONFIG_PACKAGE_
-           CONFIG_PACKAGE_
-           CONFIG_PACKAGE_
-           CONFIG_PACKAGE_
-           CONFIG_PACKAGE_
-           CONFIG_PACKAGE_
+           CONFIG_PACKAGE_luci-app-unblockmusic=y
+           CONFIG_PACKAGE_luci-app-syncdial
+           CONFIG_PACKAGE_luci-app-tinyproxy=y
+           CONFIG_PACKAGE_luci-app-udpxy=y
+           CONFIG_PACKAGE_luci-app-unbound=y
+           CONFIG_PACKAGE_luci-app-upnp=y
+           CONFIG_PACKAGE_luci-app-usb-printer=y
+           CONFIG_PACKAGE_luci-app-vlmcsd=y
+           CONFIG_PACKAGE_luci-app-vnstat=y
+           CONFIG_PACKAGE_luci-app-vpnbypass=y
+           CONFIG_PACKAGE_luci-app-vsftpd=y
+           CONFIG_PACKAGE_luci-app-watchcat=y
            CONFIG_PACKAGE_luci-app-webadmin=y
+           CONFIG_PACKAGE_luci-app-wifischedule=y
            CONFIG_PACKAGE_luci-app-wireguard=y
+           CONFIG_PACKAGE_luci-app-wol=y
            CONFIG_PACKAGE_luci-app-wrtbwmon=y
+           CONFIG_PACKAGE_luci-app-xlnetacc=y
+           CONFIG_PACKAGE_luci-app-zerotier=y
            EOF
 
           # LuCI主题:
            cat >> .config <<EOF
+           CONFIG_PACKAGE_luci-theme-bootstrap=y
            CONFIG_PACKAGE_luci-theme-argon=y
            CONFIG_PACKAGE_luci-theme-netgear=y
+           EOF
+
+          # Proto接口:
+           cat >> .config <<EOF
+           CONFIG_PACKAGE_luci-proto-3g=y
+           CONFIG_PACKAGE_luci-proto-bonding=y
+           CONFIG_PACKAGE_luci-proto-ipip
+           CONFIG_PACKAGE_luci-proto-ipv6
+           CONFIG_PACKAGE_luci-proto-ncm
+           CONFIG_PACKAGE_luci-proto-openconnect
+           CONFIG_PACKAGE_luci-proto-ppp=y
+           CONFIG_PACKAGE_luci-proto-qmi
+           CONFIG_PACKAGE_luci-proto-relay
+           CONFIG_PACKAGE_luci-proto-vpnc
+           CONFIG_PACKAGE_luci-proto-wireguard
            EOF
 
           # 常用软件包:
